basic auth done and two utils handler added to project => catchAsync & appError

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 3000
 JWT_SECRET = "asdasdasdas364d5a6sda"
+JWT_EXPIRES_IN='30d'
+JWT_COOKIE_EXPIRES_IN=30
 MONGO_URI="mongodb://127.0.0.1/bus-booking"
