--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.3",
     "validator": "^13.12.0"
   },
   "devDependencies": {
