--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "import":"node ./config/seeder.js -i",
+    "remove":"node ./config/seeder.js -d"
   },
   "keywords": [],
   "author": "aran@code",
