--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "import":"node ./config/seeder.js -i",
-    "remove":"node ./config/seeder.js -d"
+    "import": "node ./config/seeder.js -i",
+    "remove": "node ./config/seeder.js -d"
   },
   "keywords": [],
   "author": "aran@code",
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
