--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "import": "node ./config/seeder.js -i",
-    "remove": "node ./config/seeder.js -d"
+    "importDriver": "node ./config/driverSeeder.js -i",
+    "removeDriver": "node ./config/driverSeeder.js -d",
+    "importBus": "node ./config/busSeeder.js -i",
+    "removeBus": "node ./config/busSeeder.js -d"
   },
   "keywords": [],
   "author": "aran@code",
