admin auth backend done

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT = 3000
 JWT_SECRET = "asdasdasdas364d5a6sda"
 JWT_EXPIRES_IN='30d'
 JWT_COOKIE_EXPIRES_IN=30
-MONGO_URI="mongodb://localhost:27017/bus_db"
+MONGO_URI="mongodb://localhost:27017/busdb"
